# blog

./: .gitattributes  .gitmodules  .pre-commit-config.yaml  CNAME  LICENSE  Makefile  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: build.yaml  clean-up.yml
.tx/: config
en/: .buildinfo  blog.html  contacts.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  teaching.html  test.html
en/.doctrees/: blog.doctree  contacts.doctree  environment.pickle  index.doctree  teaching.doctree  test.doctree
en/_sources/: index.rst.txt  teaching.rst.txt  test.rst.txt
en/blog/: 2022.html  2023.html  archive.html  author.html  category.html  drafts.html  language.html  location.html  tag.html
en/cases/: ab.html  bioinfo.html  brain.html  chemistry.html  mmm.html
en/pages/: book-a-call.html
en/teaching/: state-of-bayes.html
ru/: .buildinfo  blog.html  contacts.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  teaching.html  test.html
ru/.doctrees/: blog.doctree  contacts.doctree  environment.pickle  index.doctree  teaching.doctree  test.doctree
ru/_sources/: index.rst.txt  test.rst.txt
ru/blog/: 2022.html  2023.html  archive.html  author.html  category.html  drafts.html  language.html  location.html  tag.html
ru/cases/: ab.html  bioinfo.html  brain.html  chemistry.html  mmm.html
ru/pages/: book-a-call.html
scripts/: check-pot-consistency  extra-pot
source/: blog.rst  conf.py  contacts.rst  index.rst  references.bib  talks.rst  teaching.rst  test.rst  xref.yaml
source/cases/: ab.rst  (+4 more)
(+169 files in other folders)
